alignment of bugs

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -4,9 +4,6 @@ html, body {
 
 }
 
-.navbar {
-  margin-top: 30px;
-}
 .container > footer {
   margin-top: 20px;
 }
@@ -33,20 +30,9 @@ html, body {
 .content .well {
 	padding-bottom: 0px;
 }
-/* Page header tweaks */
-.page-header {
-  background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
-}
-
-.topbar .btn {
-  border: 0;
-}
-
 
 .madrona-quote {
-	padding-left: 50px;
+	margin-left: 5%;
 }
 
 .ecotrust-logo img {
@@ -72,7 +58,7 @@ html, body {
 
 .primary-nav .nav {
 	margin-bottom: 10px;
-	margin-left: -5px;
+	margin-left: 0px;
 }
 
 .primary-nav .nav a {
@@ -117,6 +103,19 @@ html, body {
 	
 }
 
+.bug {
+	padding-top: 10%;
+	padding-bottom: 10%;
+}
+
+.bug > div {
+	margin-left: 10%;
+}
+
+/*.bug p, .bug h4 {
+	text-align: center;
+}
+*/
 footer {
 	padding-top: 20px;
 	font-family: 'Droid Sans', sans-serif;
@@ -124,10 +123,6 @@ footer {
 	background-image: url('../img/rough_diagonal.png');
 	margin: 0 -20px;
 	padding: 15px 50px;
-}
-
-#showcase {
-	min-width: 400px;
 }
 
 .carousel .item > img {
